Ukrainian, update strings.xml

--- a/commons/src/main/res/values-uk/strings.xml
+++ b/commons/src/main/res/values-uk/strings.xml
@@ -465,7 +465,7 @@
     <string name="scrolling">Прокручування</string>
     <string name="file_operations">Дії з файлами</string>
     <string name="recycle_bin">Кошик</string>
-    <string name="saving_label">Триває збереження</string>
+    <string name="saving_label">Збереження</string>
     <string name="startup">Запуск</string>
     <string name="text">Текст</string>
     <string name="migrating">Перенесення</string>
