--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -278,6 +278,9 @@
     <string name="go_to_settings">Aller aux Paramètres</string>
     <string name="protection_setup_successfully">Mot de passe défini. Veuillez réinstaller l\'application en cas problèmes de réinitialisation.</string>
     <string name="fingerprint_setup_successfully">Protection définie. Veuillez réinstaller l\'application en cas problèmes de réinitialisation.</string>
+    <string name="lock_folder">Lock folder</string>
+    <string name="unlock_folder">Unlock folder</string>
+    <string name="lock_folder_notice">This protection works in this app only, it is not supposed to replace a real systemwide folder encryption.</string>
 
     <!-- Times -->
     <string name="yesterday">Hier</string>
