--- a/commons/src/main/res/values-id/strings.xml
+++ b/commons/src/main/res/values-id/strings.xml
@@ -272,6 +272,9 @@
     <string name="go_to_settings">Pergi ke Setelan</string>
     <string name="protection_setup_successfully">Password berhasil dibuat. Harap instal ulang aplikasi jika suatu saat Anda lupa.</string>
     <string name="fingerprint_setup_successfully">Perlindungan berhasil dibuat. Harap instal ulang aplikasi jika ada masalah dalam menyetel ulang.</string>
+    <string name="lock_folder">Lock folder</string>
+    <string name="unlock_folder">Unlock folder</string>
+    <string name="lock_folder_notice">This protection works in this app only, it is not supposed to replace a real systemwide folder encryption.</string>
 
     <!-- Times -->
     <string name="yesterday">Kemarin</string>
